# Stremio-Watchlist-Maker

./: .env.example  .gitignore  BackupExample.json  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  run.bat
.github/workflows/: pages.yml
deploy/vps/: README.md  channel-organizer.service  docker-compose.tunnel.yml  env.example  install.sh  nginx-site.conf.example
docs/: DEPLOY.md  PR_CHECKLIST.md  SECURITY.md
rust/title_parser/: Cargo.toml
rust/title_parser/src/: main.rs
scripts/: build_backup_example.py  count_bookmarks.py
tests/: APEX.md  PROTOCOL.md  test_addon.py  test_configure_route.py  test_db.py  test_filters.py  test_parser.py  test_parser_pagination.py  test_security.py  test_sort.py  test_stremio_launcher.py
web/: 404.html  configure.html  index.html
web/static/: configure.css  configure.js
