[project]
name = "stremio-playlists"
version = "0.1.0"
description = "Stremio addon for user playlists with smart importers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sanic>=24.12.0",
    "aiohttp>=3.11.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]
perf = ["numba>=0.60.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["packages"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
